# src/main/java/com/dasad/empresa/controller/PerfilController.java
@@ -1,9 +1,11 @@
 package com.dasad.empresa.controller;
 
+import com.dasad.empresa.api.PerfilApi;
 import com.dasad.empresa.infra.security.AuthorizationService;
 import com.dasad.empresa.model.PerfilModel;
 import com.dasad.empresa.service.PerfilService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -16,7 +18,7 @@ import java.util.List;
 @CrossOrigin(
         origins = {"http://localhost:4200", "http://localhost:8080"}
 )
-public class PerfilController {
+public class PerfilController implements PerfilApi {
     @Autowired
     private PerfilService perfilService;
     @Autowired
@@ -25,8 +27,10 @@ public class PerfilController {
     public PerfilController() {
     }
 
+    @Override
     @GetMapping
-    public List<PerfilModel> findAll() {
-        return this.perfilService.findAll();
+    public ResponseEntity<List<PerfilModel>> findPerfil() {
+        var perfis =  this.perfilService.findAll();
+        return ResponseEntity.ok(perfis);
     }
 }
