# src/main/java/com/dasad/empresa/controller/SenhaController.java
@@ -25,30 +25,6 @@ public class SenhaController implements SenhaApi {
     @Autowired
     private SenhaService senhaService;
 
-//    @PostMapping("/lembrar-senha")
-//    public ResponseEntity<String> lembrarSenha(@RequestBody Map<String, String> request) {
-//        String email = request.get("email");
-//        UsuarioModel usuarioModel = usuarioService.findByEmail(email)
-//                .orElseThrow(() -> new RuntimeException("Usuário não encontrado"));
-//
-//        String token = UUID.randomUUID().toString();
-//        usuarioService.createPasswordResetTokenForUser(convertToUsuario(usuarioModel), token);
-//
-//        String resetUrl = "http://localhost:8080/resetar-senha?token=" + token;
-//        emailService.sendPasswordResetEmail(usuarioModel.getEmail(), resetUrl);
-//
-//        return ResponseEntity.ok("E-mail de redefinição de senha enviado com sucesso");
-//    }
-
-//    private UsuarioRecord convertToUsuario(com.dasad.empresa.model.UsuarioModel usuarioModel) {
-//        UsuarioRecord usuarioRecord = new UsuarioRecord();
-//        usuarioRecord.setId(usuarioModel.getId());
-//        usuarioRecord.setNome(usuarioModel.getNome());
-//        usuarioRecord.setEmail(usuarioModel.getEmail());
-//        // Adicione outros campos conforme necessário
-//        return usuarioRecord;
-//    }
-
     @Override
     @PostMapping("/recuperar")
     public ResponseEntity<RecuperarSenha200Response> recuperarSenha(RecuperarSenhaRequest recuperarSenhaRequest) {
